Fix T43910: Unpack fails when stored filename is broken (empty, or no file part...).

Now we have an helper that will generate local/global paths and ensure they are valid.

Note: We currently have no way to 'generate' a valid extension in these cases, so just
using raw (file-safe) ID name.